// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`([true|tail] => 1) 1`] = `
Object {
  "expressions": Array [
    Object {
      "clauses": Array [
        Object {
          "body": Array [
            Object {
              "kind": "Numeral",
              "value": 1,
            },
          ],
          "pattern": Array [
            Object {
              "head": Object {
                "kind": "Bool",
                "value": true,
              },
              "kind": "DestructuredArray",
              "tail": Object {
                "kind": "Name",
                "name": "tail",
              },
            },
          ],
        },
      ],
      "kind": "Fn",
    },
  ],
  "kind": "Program",
}
`;

exports[`(true => 1) 1`] = `
Object {
  "expressions": Array [
    Object {
      "clauses": Array [
        Object {
          "body": Array [
            Object {
              "kind": "Numeral",
              "value": 1,
            },
          ],
          "pattern": Array [
            Object {
              "kind": "Bool",
              "value": true,
            },
          ],
        },
      ],
      "kind": "Fn",
    },
  ],
  "kind": "Program",
}
`;

exports[`fibonacci.peach 1`] = `
Object {
  "expressions": Array [
    Object {
      "kind": "Def",
      "name": "fib",
      "value": Object {
        "clauses": Array [
          Object {
            "body": Array [
              Object {
                "kind": "Numeral",
                "value": 1,
              },
            ],
            "pattern": Array [
              Object {
                "kind": "Numeral",
                "value": 0,
              },
            ],
          },
          Object {
            "body": Array [
              Object {
                "kind": "Numeral",
                "value": 1,
              },
            ],
            "pattern": Array [
              Object {
                "kind": "Numeral",
                "value": 1,
              },
            ],
          },
          Object {
            "body": Array [
              Object {
                "args": Array [
                  Object {
                    "args": Array [
                      Object {
                        "args": Array [
                          Object {
                            "kind": "Name",
                            "name": "x",
                          },
                          Object {
                            "kind": "Numeral",
                            "value": 1,
                          },
                        ],
                        "fn": Object {
                          "kind": "Name",
                          "name": "-",
                        },
                        "kind": "Call",
                      },
                    ],
                    "fn": Object {
                      "kind": "Name",
                      "name": "fib",
                    },
                    "kind": "Call",
                  },
                  Object {
                    "args": Array [
                      Object {
                        "args": Array [
                          Object {
                            "kind": "Name",
                            "name": "x",
                          },
                          Object {
                            "kind": "Numeral",
                            "value": 2,
                          },
                        ],
                        "fn": Object {
                          "kind": "Name",
                          "name": "-",
                        },
                        "kind": "Call",
                      },
                    ],
                    "fn": Object {
                      "kind": "Name",
                      "name": "fib",
                    },
                    "kind": "Call",
                  },
                ],
                "fn": Object {
                  "kind": "Name",
                  "name": "+",
                },
                "kind": "Call",
              },
            ],
            "pattern": Array [
              Object {
                "kind": "Name",
                "name": "x",
              },
            ],
          },
        ],
        "kind": "Fn",
      },
    },
    Object {
      "args": Array [
        Object {
          "kind": "Name",
          "name": "fib",
        },
        Object {
          "kind": "Array",
          "values": Array [
            Object {
              "kind": "Numeral",
              "value": 0,
            },
            Object {
              "kind": "Numeral",
              "value": 1,
            },
            Object {
              "kind": "Numeral",
              "value": 2,
            },
            Object {
              "kind": "Numeral",
              "value": 3,
            },
            Object {
              "kind": "Numeral",
              "value": 4,
            },
            Object {
              "kind": "Numeral",
              "value": 5,
            },
            Object {
              "kind": "Numeral",
              "value": 6,
            },
            Object {
              "kind": "Numeral",
              "value": 7,
            },
            Object {
              "kind": "Numeral",
              "value": 8,
            },
            Object {
              "kind": "Numeral",
              "value": 9,
            },
            Object {
              "kind": "Numeral",
              "value": 10,
            },
          ],
        },
      ],
      "fn": Object {
        "kind": "Name",
        "name": "map",
      },
      "kind": "Call",
    },
  ],
  "kind": "Program",
}
`;

exports[`str.peach 1`] = `
Object {
  "expressions": Array [
    Object {
      "kind": "Array",
      "values": Array [
        Object {
          "kind": "Str",
          "value": "str.peach before escape\\\\\`and after!",
        },
        Object {
          "kind": "Str",
          "value": "hey 🌟",
        },
        Object {
          "kind": "Str",
          "value": "multi
      line
  string",
        },
        Object {
          "kind": "Str",
          "value": "such\\\\\\\\\\\\\\\\\\\\\`escape",
        },
        Object {
          "kind": "Str",
          "value": "with	tab",
        },
        Object {
          "kind": "Str",
          "value": "new
line",
        },
        Object {
          "kind": "Str",
          "value": "back\\\\slash",
        },
        Object {
          "kind": "Str",
          "value": "back\\\\\\\\to\\\\back",
        },
      ],
    },
  ],
  "kind": "Program",
}
`;

exports[`tail-recursion.peach 1`] = `
Object {
  "expressions": Array [
    Object {
      "kind": "Def",
      "name": "factorial",
      "value": Object {
        "clauses": Array [
          Object {
            "body": Array [
              Object {
                "kind": "Name",
                "name": "n",
              },
            ],
            "pattern": Array [
              Object {
                "kind": "Name",
                "name": "n",
              },
              Object {
                "kind": "Numeral",
                "value": 1,
              },
            ],
          },
          Object {
            "body": Array [
              Object {
                "args": Array [
                  Object {
                    "args": Array [
                      Object {
                        "kind": "Name",
                        "name": "n",
                      },
                      Object {
                        "kind": "Name",
                        "name": "x",
                      },
                    ],
                    "fn": Object {
                      "kind": "Name",
                      "name": "*",
                    },
                    "kind": "Call",
                  },
                  Object {
                    "args": Array [
                      Object {
                        "kind": "Name",
                        "name": "x",
                      },
                      Object {
                        "kind": "Numeral",
                        "value": 1,
                      },
                    ],
                    "fn": Object {
                      "kind": "Name",
                      "name": "-",
                    },
                    "kind": "Call",
                  },
                ],
                "fn": Object {
                  "kind": "Name",
                  "name": "factorial",
                },
                "kind": "Call",
              },
            ],
            "pattern": Array [
              Object {
                "kind": "Name",
                "name": "n",
              },
              Object {
                "kind": "Name",
                "name": "x",
              },
            ],
          },
        ],
        "kind": "Fn",
      },
    },
    Object {
      "kind": "Def",
      "name": "f",
      "value": Object {
        "clauses": Array [
          Object {
            "body": Array [
              Object {
                "args": Array [
                  Object {
                    "kind": "Numeral",
                    "value": 1,
                  },
                  Object {
                    "kind": "Name",
                    "name": "n",
                  },
                ],
                "fn": Object {
                  "kind": "Name",
                  "name": "factorial",
                },
                "kind": "Call",
              },
            ],
            "pattern": Array [
              Object {
                "kind": "Name",
                "name": "n",
              },
            ],
          },
        ],
        "kind": "Fn",
      },
    },
    Object {
      "args": Array [
        Object {
          "kind": "Numeral",
          "value": 32768,
        },
      ],
      "fn": Object {
        "kind": "Name",
        "name": "f",
      },
      "kind": "Call",
    },
  ],
  "kind": "Program",
}
`;
